--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".HomePageActivity" />
-        <activity android:name=".description"></activity>
+        <activity android:name=".description" />
+        <activity
+            android:name=".ChoreListActivity"
+            android:label="@string/title_activity_chore_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.ChoresListActivity"></activity>
     </application>
 
 </manifest>
