Added a menu in chores list view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.ChoresListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomePageActivity" />
-        <activity android:name=".description" />
-        <activity
-            android:name=".ChoreListActivity"
-            android:label="@string/title_activity_chore_list"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.ChoresListActivity"></activity>
+        <!--<activity android:name=".activity.ChoresListActivity"></activity>-->
     </application>
 
 </manifest>
