Redirect recipe link open in webview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-     <application
-         android:networkSecurityConfig="@xml/network_security_config"
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -19,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.activities.RecipeList"></activity>
+        <activity android:name=".activity.activities.RecipeList" />
+        <activity android:name=".activity.activities.ShowLinkActivity"></activity>
     </application>
 
 </manifest>
